--- a/concurrency/config/200-serviceaccount.yaml
+++ b/concurrency/config/200-serviceaccount.yaml
@@ -21,3 +21,13 @@ metadata:
     app.kubernetes.io/component: concurrency-controller
     app.kubernetes.io/instance: default
     app.kubernetes.io/part-of: tekton-concurrency
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: tekton-concurrency-webhook
+  namespace: tekton-concurrency
+  labels:
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-experimental-concurrency
