--- a/concurrency/config/201-rolebinding.yaml
+++ b/concurrency/config/201-rolebinding.yaml
@@ -29,3 +29,22 @@ roleRef:
   kind: Role
   name: concurrency-controller
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: tekton-concurrency-webhook
+  namespace: tekton-concurrency
+  labels:
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-experimental-concurrency
+subjects:
+  - kind: ServiceAccount
+    name: tekton-concurrency-webhook
+    namespace: tekton-concurrency
+roleRef:
+  kind: Role
+  name: tekton-concurrency-webhook
+  apiGroup: rbac.authorization.k8s.io
+  
