--- a/concurrency/config/202-clusterrolebinding.yaml
+++ b/concurrency/config/202-clusterrolebinding.yaml
@@ -49,3 +49,38 @@ roleRef:
   kind: ClusterRole
   name: tekton-concurrency-controller-tenant-access
   apiGroup: rbac.authorization.k8s.io
+apiVersion: rbac.authorization.k8s.io/v1
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-concurrency-webhook-cluster-access
+  labels:
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-concurrency
+subjects:
+  - kind: ServiceAccount
+    name: tekton-concurrency-webhook
+    namespace: tekton-concurrency
+roleRef:
+  kind: ClusterRole
+  name: tekton-concurrency-webhook-cluster-access
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-concurrency-webhook-leaderelection
+  labels:
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/instance: default
+    app.kubernetes.io/part-of: tekton-concurrency
+subjects:
+  - kind: ServiceAccount
+    name: tekton-concurrency-webhook
+    namespace: tekton-concurrency
+roleRef:
+  kind: ClusterRole
+  name: tekton-concurrency-leader-election
+  apiGroup: rbac.authorization.k8s.io
